<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu.GioiThieu">

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CB03A9F4"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgback"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/thongtinchitiet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:text="Giới thiệu "
            android:textColor="#080908"
            android:textSize="17sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="10dp"
        android:layout_below="@id/layout1"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtMobai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gioi_thieu"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txtXe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtMobai"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="DHSL - An tâm trên mọi nẻo đường"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtSanpham"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtXe"
                android:layout_marginTop="10dp"
                android:text="Sản phẩm/ Dịch vụ"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtsp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtSanpham"
                android:layout_marginTop="10dp"
                android:text="@string/sp" />

            <TextView
                android:id="@+id/txtGiatri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtsp"
                android:layout_marginTop="10dp"
                android:text="Giá trị cốt lõi"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtGiatri"
                android:layout_marginTop="10dp"
                android:text="@string/txt1" />

            <TextView
                android:id="@+id/txt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt1"
                android:layout_marginTop="10dp"
                android:text="@string/txt2" />

            <TextView
                android:id="@+id/txt3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt2"
                android:layout_marginTop="10dp"
                android:text="@string/txt3" />

            <TextView
                android:id="@+id/txt4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt3"
                android:layout_marginTop="10dp"
                android:text="@string/txt4" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>